--- a/style.css
+++ b/style.css
@@ -3,15 +3,26 @@
     --grid-row: 16;
 }
 
-#container {
+#title {
+  text-align: center;
+  padding-top: 40px;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: xx-large;
+}
+
+#sketch_container {
   display: flex;
-  height: 100vh;
-  margin: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin-top: -70px;
   justify-content: center;
   align-items: center;
 }
 
-#sketchframe {
+#sketch_frame {
     display: grid;
     grid-template-columns: repeat(var(--grid-col), 1fr);
     grid-template-rows: repeat(var(--grid-row), 1fr);
@@ -25,7 +36,6 @@
   height: 30px;
 }
 
-#title {
-  display: flex;
-  justify-content: center;
+body {
+  background-color: rgb(188, 188, 188);
 }
